--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "3.8.x",
+    "gulp": "3.9.x",
     "gulp-concat": "2.5.x",
     "gulp-jshint": "1.9.x",
     "gulp-minify-css": "1.0.x",
     "gulp-plumber": "1.0.x",
+    "gulp-sass": "^2.3.1",
     "gulp-uglify": "1.1.x",
     "jshint-stylish": "1.0.x",
+    "node-sass": "^3.7.0",
     "underscore": "1.8.x"
   },
   "scripts": {
