--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "homepage": "https://github.com/hacksu/kenthackenough-ui-main",
   "authors": [
-    "Paul Dilyard <paul.dilyard@gmail.com>"
+    "Paul Dilyard <paul.dilyard@gmail.com>",
+    "Nick Crawford <ncrawford176@gmail.com>"
   ],
   "main": "index.html",
   "license": "MIT",
@@ -30,7 +31,9 @@
     "notify.js": "1.2.x",
     "instafeed.js": "1.3.x",
     "angular-moment": "0.10.x",
-    "moment-timezone": "~0.4.0"
+    "moment-timezone": "~0.4.0",
+    "threejs": "*",
+    "angular-elastic-input": "^2.4.0"
   },
   "resolutions": {
     "angular": "1.3.x"
