--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "instafeed.js": "1.3.x",
     "angular-moment": "0.10.x",
     "moment-timezone": "~0.4.0",
-    "angular-elastic-input": "^2.4.0"
+    "angular-elastic-input": "^2.4.0",
+    "angular-scroll": "~1.0.0"
   },
   "resolutions": {
     "angular": "1.3.x"
